--- a/test/new-e2e/tests/otel/otel-agent/testdata/no-dd-exporter-provided-config.yml
+++ b/test/new-e2e/tests/otel/otel-agent/testdata/no-dd-exporter-provided-config.yml
@@ -12,6 +12,7 @@ exporters:
       reporter_period: 30m0s
       tags: []
     hostname: ""
+    hostname_detection_timeout: 25s
     idle_conn_timeout: 1m30s
     logs:
       batch_wait: 5
