--- a/test/new-e2e/tests/otel/otel-agent/testdata/minimal-full-config.yml
+++ b/test/new-e2e/tests/otel/otel-agent/testdata/minimal-full-config.yml
@@ -26,6 +26,7 @@ exporters:
       reporter_period: 30m0s
       tags: []
     hostname: otelcol-docker
+    hostname_detection_timeout: 25s
     idle_conn_timeout: "1m30s"
     logs:
       batch_wait: 5
@@ -166,12 +167,14 @@ receivers:
         gogc: 75
       scrape_configs:
         - enable_compression: true
+          convert_classic_histograms_to_nhcb: false
           enable_http2: true
           fallback_scrape_protocol: PrometheusText0.0.4
           follow_redirects: true
           honor_timestamps: true
           job_name: datadog-agent
           metric_name_validation_scheme: legacy
+          metric_name_escaping_scheme: underscores
           metrics_path: /metrics
           scheme: http
           scrape_interval: 1m
