--- a/.gitlab/deploy_containers/deploy_containers_a7.yml
+++ b/.gitlab/deploy_containers/deploy_containers_a7.yml
@@ -22,7 +22,7 @@ include:
   stage: deploy_containers
   dependencies: []
   before_script:
-    - if [[ "$VERSION" == "" ]]; then VERSION="$(dda inv agent.version --url-safe --pipeline-id $PARENT_PIPELINE_ID)" || exit $?; fi
+    - if [[ "$VERSION" == "" ]]; then VERSION="$(dda inv -- agent.version --url-safe --pipeline-id $PARENT_PIPELINE_ID)" || exit $?; fi
     - export IMG_BASE_SRC="${SRC_AGENT}:v${PARENT_PIPELINE_ID}-${CI_COMMIT_SHORT_SHA}"
     - export IMG_LINUX_SOURCES="${IMG_BASE_SRC}-7${JMX}-amd64,${IMG_BASE_SRC}-7${JMX}-arm64"
     - export IMG_WINDOWS_SOURCES="${IMG_BASE_SRC}-7${JMX}-win1809${FLAVOR}-amd64,${IMG_BASE_SRC}-7${JMX}-winltsc2022${FLAVOR}-amd64"
@@ -36,7 +36,7 @@ include:
   before_script:
     - OS=$(echo $OS_LTSC_MAPPING | cut -d ':' -f 1)
     - LTSC_VERSION=$(echo $OS_LTSC_MAPPING | cut -d ':' -f 2)
-    - if [[ "$VERSION" == "" ]]; then VERSION="$(dda inv agent.version --major-version 7 --url-safe --pipeline-id $PARENT_PIPELINE_ID)" || exit $?; fi
+    - if [[ "$VERSION" == "" ]]; then VERSION="$(dda inv -- agent.version --major-version 7 --url-safe --pipeline-id $PARENT_PIPELINE_ID)" || exit $?; fi
     - IMG_BASE_SRC="${SRC_AGENT}:v${PARENT_PIPELINE_ID}-${CI_COMMIT_SHORT_SHA}"
     - export IMG_SOURCES="${IMG_BASE_SRC}-7${JMX}-win${OS}${FLAVOR}-amd64"
     - export IMG_DESTINATIONS="${AGENT_REPOSITORY}:${VERSION}${FLAVOR}-ltsc${LTSC_VERSION}${JMX}"
@@ -46,7 +46,7 @@ include:
   stage: deploy_containers
   dependencies: []
   before_script:
-    - if [[ -z "$VERSION" ]]; then VERSION="$(dda inv agent.version --url-safe --pipeline-id $PARENT_PIPELINE_ID)-fips" || exit $?; fi
+    - if [[ -z "$VERSION" ]]; then VERSION="$(dda inv -- agent.version --url-safe --pipeline-id $PARENT_PIPELINE_ID)-fips" || exit $?; fi
     - export IMG_SOURCES="${SRC_AGENT}:v${PARENT_PIPELINE_ID}-${CI_COMMIT_SHORT_SHA}-7-fips${JMX}-amd64,${SRC_AGENT}:v${PARENT_PIPELINE_ID}-${CI_COMMIT_SHORT_SHA}-7-fips${JMX}-arm64"
     - export IMG_DESTINATIONS="${AGENT_REPOSITORY}:${VERSION}${JMX}"
 
@@ -55,7 +55,7 @@ include:
   stage: deploy_containers
   dependencies: []
   before_script:
-    - if [[ -z "$VERSION" ]]; then VERSION="$(dda inv agent.version --url-safe --pipeline-id $PARENT_PIPELINE_ID)" || exit $?; fi
+    - if [[ -z "$VERSION" ]]; then VERSION="$(dda inv -- agent.version --url-safe --pipeline-id $PARENT_PIPELINE_ID)" || exit $?; fi
     - export IMG_BASE_SRC="${SRC_AGENT}:v${PARENT_PIPELINE_ID}-${CI_COMMIT_SHORT_SHA}"
     - export IMG_LINUX_SOURCES="${IMG_BASE_SRC}-7-full-amd64,${IMG_BASE_SRC}-7-full-arm64"
     - export IMG_WINDOWS_SOURCES="${IMG_BASE_SRC}-7-jmx-win1809-amd64,${IMG_BASE_SRC}-7-jmx-winltsc2022-amd64"
@@ -103,48 +103,10 @@ deploy_containers-a7-full:
   rules:
     !reference [.manual_on_deploy_auto_on_rc]
 
-deploy_containers-a7-full-internal:
-  extends: .deploy_containers-a7-full-base
-  rules:
-    !reference [.on_internal_final]
-
 deploy_containers-a7-fips:
   extends: .deploy_containers-a7-base-fips
   rules:
     !reference [.manual_on_deploy_auto_on_rc]
-  parallel:
-    matrix:
-      - JMX:
-          - ""
-          - "-jmx"
-
-deploy_containers-a7-rc:
-  extends: .deploy_containers-a7_external
-  rules:
-    !reference [.on_rc]
-  variables:
-    VERSION: 7-rc
-
-deploy_containers-a7-win-only-rc:
-  extends: .deploy_containers-a7_win_only_external
-  rules:
-    !reference [.on_rc]
-  variables:
-    VERSION: 7-rc
-
-deploy_containers-a7-full-rc:
-  extends: .deploy_containers-a7-full-base
-  rules:
-    !reference [.on_rc]
-  variables:
-    VERSION: 7-rc
-
-deploy_containers-a7-fips-rc:
-  extends: .deploy_containers-a7-base-fips
-  rules:
-    !reference [.on_rc]
-  variables:
-    VERSION: 7-fips-rc
   parallel:
     matrix:
       - JMX:
@@ -158,9 +120,28 @@ deploy_containers-dogstatsd:
     !reference [.manual_on_deploy_auto_on_rc]
   dependencies: []
   before_script:
-    - VERSION="$(dda inv agent.version --url-safe --pipeline-id $PARENT_PIPELINE_ID)" || exit $?
+    - VERSION="$(dda inv -- agent.version --url-safe --pipeline-id $PARENT_PIPELINE_ID)" || exit $?
     - export IMG_SOURCES="${SRC_DSD}:v${PARENT_PIPELINE_ID}-${CI_COMMIT_SHORT_SHA}-amd64,${SRC_DSD}:v${PARENT_PIPELINE_ID}-${CI_COMMIT_SHORT_SHA}-arm64"
     - export IMG_DESTINATIONS="${DSD_REPOSITORY}:${VERSION}"
+
+# Jobs [.on_internal_rc]
+
+deploy_containers-a7_internal-rc:
+  extends: .deploy_containers-a7-base
+  rules:
+    !reference [.on_internal_rc]
+
+deploy_containers-a7-fips_internal-rc:
+  extends: .deploy_containers-a7-base-fips
+  rules:
+    !reference [.on_internal_rc]
+  parallel:
+    matrix:
+      - JMX:
+          - ""
+          - "-jmx"
+
+# Jobs [.on_internal_final]
 
 deploy_containers-a7_internal:
   extends: .deploy_containers-a7-base
@@ -169,13 +150,10 @@ deploy_containers-a7_internal:
   variables:
     JMX: "-jmx"
 
-
-deploy_containers-a7_internal-rc:
-  extends: .deploy_containers-a7-base
+deploy_containers-a7-full-internal:
+  extends: .deploy_containers-a7-full-base
   rules:
-    !reference [.on_internal_rc]
-  variables:
-    VERSION: 7-rc
+    !reference [.on_internal_final]
 
 deploy_containers-a7-fips_internal:
   extends: .deploy_containers-a7-base-fips
@@ -183,15 +161,3 @@ deploy_containers-a7-fips_internal:
     !reference [.on_internal_final]
   variables:
     JMX: "-jmx"
-
-deploy_containers-a7-fips_internal-rc:
-  extends: .deploy_containers-a7-base-fips
-  rules:
-    !reference [.on_internal_rc]
-  variables:
-    VERSION: 7-fips-rc
-  parallel:
-    matrix:
-      - JMX:
-          - ""
-          - "-jmx"
