--- a/tasks/libs/pipeline/github_slack_map.yaml
+++ b/tasks/libs/pipeline/github_slack_map.yaml
@@ -5,6 +5,7 @@
 # because the '@' symbol is reserved in YAML.
 '@datadog/agent-all': '#datadog-agent-pipelines'
 '@datadog/agent-apm': '#apm-agent'
+'@datadog/agent-build': '#agent-build-ops'
 '@datadog/agent-configuration': '#agent-configuration-ops'
 '@datadog/agent-cspm': '#k9-cspm-ops'
 '@datadog/agent-delivery': '#agent-delivery-ops'
