Update Agent RC fips mutable tags to 7-rc-fips

--- a/.gitlab/deploy_containers/deploy_mutable_image_tags.yml
+++ b/.gitlab/deploy_containers/deploy_mutable_image_tags.yml
@@ -72,7 +72,7 @@ deploy_mutable_image_tags-a7-full-rc:
       - SUFFIX: ["-full"]
 
 deploy_mutable_image_tags-a7-fips-rc:
-  extends: .deploy_mutable_image_tags_base
+  extends: .deploy_mutable_image_tags_7-rc
   rules:
     !reference [.on_rc]
   needs:
@@ -80,10 +80,9 @@ deploy_mutable_image_tags-a7-fips-rc:
       artifacts: false
   parallel:
     matrix:
-      - SUFFIX: ["-fips"]
-        IMG_NEW_TAGS: ["7-fips-rc"]
-      - SUFFIX: ["-fips-jmx"]
-        IMG_NEW_TAGS: ["7-fips-rc-jmx"]
+      - SUFFIX:
+          - "-fips"
+          - "-fips-jmx"
 
 # Jobs [.on_internal_rc]
 
@@ -99,7 +98,7 @@ deploy_mutable_image_tags-a7_internal-rc:
       - SUFFIX: [""]
 
 deploy_mutable_image_tags-a7-fips_internal-rc:
-  extends: .deploy_mutable_image_tags_base
+  extends: .deploy_mutable_image_tags_7-rc
   rules:
     !reference [.on_internal_rc]
   needs:
@@ -107,10 +106,9 @@ deploy_mutable_image_tags-a7-fips_internal-rc:
       artifacts: false
   parallel:
     matrix:
-      - SUFFIX: ["-fips"]
-        IMG_NEW_TAGS: ["7-fips-rc"]
-      - SUFFIX: ["-fips-jmx"]
-        IMG_NEW_TAGS: ["7-fips-rc-jmx"]
+      - SUFFIX:
+          - "-fips"
+          - "-fips-jmx"
 
 # Jobs [.on_internal_final]
 
