--- a/.gitlab/binary_build/cluster_agent.yml
+++ b/.gitlab/binary_build/cluster_agent.yml
@@ -9,7 +9,7 @@
     - !reference [.retrieve_linux_go_deps]
   script:
     - dda inv -- check-go-version
-    - dda inv -- -e cluster-agent.build --major-version "$AGENT_MAJOR_VERSION"
+    - dda inv -- -e cluster-agent.build --major-version "$AGENT_MAJOR_VERSION" --strip-binary
   artifacts:
     paths:
       - $CLUSTER_AGENT_BINARIES_DIR/datadog-cluster-agent
