adding t.parallel to test

--- a/.gitlab/e2e/e2e.yml
+++ b/.gitlab/e2e/e2e.yml
@@ -299,6 +299,7 @@ new-e2e-windows-certificate:
   variables:
     TARGETS: ./tests/windows/windows-certificate
     TEAM: windows-agent
+    EXTRA_PARAMS: --run "TestRemoteCertificates$"
 
 new-e2e-language-detection:
   extends: .new_e2e_template_needs_deb_x64
