--- a/.gitlab/e2e/e2e.yml
+++ b/.gitlab/e2e/e2e.yml
@@ -295,6 +295,7 @@ new-e2e-windows-certificate:
     - !reference [.on_windows_certificate_or_e2e_changes]
     - !reference [.manual]
   needs:
+    - !reference [.needs_new_e2e_template]
     - deploy_windows_testing-a7
   variables:
     TARGETS: ./tests/windows/windows-certificate
