--- a/.gitlab/binary_build/cluster_agent.yml
+++ b/.gitlab/binary_build/cluster_agent.yml
@@ -9,10 +9,14 @@
     - !reference [.retrieve_linux_go_deps]
   script:
     - dda inv -- check-go-version
-    - dda inv -- -e cluster-agent.build --major-version "$AGENT_MAJOR_VERSION" --strip-binary
+    - dda inv -- -e cluster-agent.build --major-version "$AGENT_MAJOR_VERSION"
+    # keep the unstripped binary for fips compliance checks
+    - cp $CLUSTER_AGENT_BINARIES_DIR/datadog-cluster-agent $CLUSTER_AGENT_BINARIES_DIR/datadog-cluster-agent-unstripped
+    - strip $CLUSTER_AGENT_BINARIES_DIR/datadog-cluster-agent
   artifacts:
     paths:
       - $CLUSTER_AGENT_BINARIES_DIR/datadog-cluster-agent
+      - $CLUSTER_AGENT_BINARIES_DIR/datadog-cluster-agent-unstripped
       - Dockerfiles/cluster-agent/datadog-cluster.yaml
       - Dockerfiles/cluster-agent/security-agent-policies
     exclude:
