--- a/.gitlab/deploy_cws_instrumentation/deploy_cws_instrumentation.yml
+++ b/.gitlab/deploy_cws_instrumentation/deploy_cws_instrumentation.yml
@@ -21,6 +21,14 @@ include:
     - export IMG_SOURCES="${IMG_BASE_SRC}-amd64,${IMG_BASE_SRC}-arm64"
     - export IMG_DESTINATIONS="${CWS_INSTRUMENTATION_REPOSITORY}:${VERSION}"
 
+.deploy_mutable_cws-instrumentation_tags_base:
+  extends: .docker_publish_job_definition
+  stage: deploy_cws_instrumentation
+  dependencies: []
+  before_script:
+    - VERSION="$(dda inv -- agent.version --url-safe --pipeline-id $PARENT_PIPELINE_ID)" || exit $?
+    - export IMG_TAG_REFERENCE=${CWS_INSTRUMENTATION_REPOSITORY}:${VERSION}
+
 # will push the `7.xx.y-rc.z` tags
 deploy_containers-cws-instrumentation-rc-versioned:
   extends: .deploy_containers-cws-instrumentation-base
@@ -28,10 +36,10 @@ deploy_containers-cws-instrumentation-rc-versioned:
 
 # will update the `rc` tag
 deploy_containers-cws-instrumentation-rc-mutable:
-  extends: .deploy_containers-cws-instrumentation-base
+  extends: .deploy_mutable_cws-instrumentation_tags_base
   rules: !reference [.on_deploy_rc]
   variables:
-    VERSION: rc
+    IMG_NEW_TAGS: rc
 
 # will push the `7.xx.y` tags
 deploy_containers-cws-instrumentation-final-versioned:
@@ -40,7 +48,7 @@ deploy_containers-cws-instrumentation-final-versioned:
 
 # will update the `latest` tag
 deploy_containers-cws-instrumentation-latest:
-  extends: .deploy_containers-cws-instrumentation-base
+  extends: .deploy_mutable_cws-instrumentation_tags_base
   rules: !reference [.on_deploy_manual_final]
   variables:
-    VERSION: latest
+    IMG_NEW_TAGS: latest
