--- a/.gitlab/source_test/macos.yml
+++ b/.gitlab/source_test/macos.yml
@@ -19,8 +19,7 @@ include:
     - dda inv -- -e gitlab.generate-ci-visibility-links --output=$EXTERNAL_LINKS_PATH
     - FAST_TESTS_FLAG=""
     - if [[ "$FAST_TESTS" == "true" ]]; then FAST_TESTS_FLAG="--only-impacted-packages"; fi
-    - dda inv -- -e test --rerun-fails=2 --race --profile --cpus 12 --result-json $TEST_OUTPUT_FILE --junit-tar "junit-${CI_JOB_NAME}.tgz" $FAST_TESTS_FLAG --test-washer --coverage
-    - dda inv -- -e invoke-unit-tests
+    - go test ./pkg/trace/agent -tags "kubelet zlib jmx python consul oracle test fargateprocess zstd orchestrator ec2 otlp trivy_no_javadb bundle_installer grpcnotrace kubeapiserver zk etcd clusterchecks"
   artifacts:
     expire_in: 2 weeks
     when: always
