--- a/.gitlab/common/trigger_distribution_conditions.yml
+++ b/.gitlab/common/trigger_distribution_conditions.yml
@@ -1,3 +1,18 @@
+#
+# Workflow rules
+# Rules used to define whether a pipeline should run, and with which variables
+#
+workflow:
+  rules:
+    - <<: *if_triggered_pipeline
+    - <<: *if_main_branch
+      variables:
+        GO_TEST_SKIP_FLAKE: "false"
+    - <<: *if_release_branch
+    - <<: *if_deploy
+    - !reference [.if_deploy_installer]
+    - if: $CI_COMMIT_TAG == null
+
 .if_deploy: &if_deploy
   if: $DEPLOY_AGENT == "true" || $DDR_WORKFLOW_ID != null
 
