--- a/.gitlab/pkg_metrics/pkg_metrics.yml
+++ b/.gitlab/pkg_metrics/pkg_metrics.yml
@@ -106,3 +106,6 @@ check_pkg_size:
   script:
     - !reference [.setup_agent_github_app]
     - dda inv -- package.check-size
+  variables:
+    # TODO(agent-devx): Re-enable VPA by removing this when it will be possible to configure memory lower bound to avoid OOMs
+    DD_ENABLE_VPA: false
