--- a/.gitlab/e2e/e2e.yml
+++ b/.gitlab/e2e/e2e.yml
@@ -103,13 +103,13 @@ go_e2e_test_binaries:
   needs:
     - go_e2e_deps
   variables:
-    KUBERNETES_CPU_REQUEST: 8
-    KUBERNETES_MEMORY_REQUEST: 8Gi
-    KUBERNETES_MEMORY_LIMIT: 12Gi
+    KUBERNETES_CPU_REQUEST: 16
+    KUBERNETES_MEMORY_REQUEST: 64Gi
+    KUBERNETES_MEMORY_LIMIT: 64Gi
   before_script:
     - !reference [.retrieve_linux_go_e2e_deps]
   script:
-    - dda inv -- -e new-e2e-tests.build-binaries --output-dir test-binaries --tags test
+    - dda inv -- -e new-e2e-tests.build-binaries --output-dir test-binaries -p $KUBERNETES_CPU_REQUEST
   artifacts:
     expire_in: 1 day
     paths:
