--- a/modules.yml
+++ b/modules.yml
@@ -127,6 +127,7 @@ modules:
   internal/tools/gotest-custom:
     independent: false
     should_tag: false
+    should_test_condition: never
   internal/tools/independent-lint:
     independent: false
     should_tag: false
