--- a/comp/core/workloadmeta/collectors/catalog-core/BUILD.bazel
+++ b/comp/core/workloadmeta/collectors/catalog-core/BUILD.bazel
@@ -20,6 +20,7 @@ go_library(
         "//comp/core/workloadmeta/collectors/internal/kubemetadata",
         "//comp/core/workloadmeta/collectors/internal/nvml",
         "//comp/core/workloadmeta/collectors/internal/podman",
+        "//comp/core/workloadmeta/collectors/internal/process",
         "//comp/core/workloadmeta/collectors/internal/processlanguage",
         "//comp/core/workloadmeta/collectors/internal/remote/processcollector",
         "@org_uber_go_fx//:fx",
