--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -292,6 +292,9 @@ variables:
 .if_deploy_stable: &if_deploy_stable
   if: ($DEPLOY_AGENT == "true" || $DDR_WORKFLOW_ID != null) && $BUCKET_BRANCH == "stable"
 
+.if_deploy_beta: &if_deploy_beta
+  if: ($DEPLOY_AGENT == "true" || $DDR_WORKFLOW_ID != null) && $BUCKET_BRANCH == "beta"
+
 .if_not_deploy: &if_not_deploy
   if: $DEPLOY_AGENT != "true" && $DDR_WORKFLOW_ID == null
 
@@ -591,6 +594,8 @@ workflow:
 # for stable branches in case of failure in any previous job
 .on_deploy_stable_on_failure:
   - <<: *if_deploy_stable
+    when: on_failure
+  - <<: *if_deploy_beta
     when: on_failure
 
 # This rule will add the job as manual when running on beta deploy branch
