[disable-vpa] Updated installer tests

--- a/.gitlab/packaging/rpm.yml
+++ b/.gitlab/packaging/rpm.yml
@@ -86,6 +86,8 @@ installer_rpm-amd64:
     # There are currently no files to check for in the installer so we
     # explicitly disable the check
     PACKAGE_REQUIRED_FILES_LIST: ""
+    # TODO(agent-devx): Re-enable VPA by removing this when it will be possible to configure memory lower bound to avoid OOMs
+    DD_ENABLE_VPA: false
 
 agent_rpm-x64-a7-fips:
   extends: [.package_rpm_common, .package_rpm_x86]
@@ -122,6 +124,8 @@ installer_rpm-arm64:
   variables:
     DD_PROJECT: installer
     PACKAGE_REQUIRED_FILES_LIST: ""
+    # TODO(agent-devx): Re-enable VPA by removing this when it will be possible to configure memory lower bound to avoid OOMs
+    DD_ENABLE_VPA: false
 
 installer_suse_rpm-amd64:
   extends: [.package_suse_rpm_common, .package_rpm_x86]
@@ -129,6 +133,8 @@ installer_suse_rpm-amd64:
   variables:
     DD_PROJECT: installer
     PACKAGE_REQUIRED_FILES_LIST: ""
+    # TODO(agent-devx): Re-enable VPA by removing this when it will be possible to configure memory lower bound to avoid OOMs
+    DD_ENABLE_VPA: false
 
 installer_suse_rpm-arm64:
   extends: [.package_suse_rpm_common, .package_rpm_arm64]
@@ -136,6 +142,8 @@ installer_suse_rpm-arm64:
   variables:
     DD_PROJECT: installer
     PACKAGE_REQUIRED_FILES_LIST: ""
+    # TODO(agent-devx): Re-enable VPA by removing this when it will be possible to configure memory lower bound to avoid OOMs
+    DD_ENABLE_VPA: false
 
 .package_iot_rpm_common:
   rules:
