--- a/pkg/config/config_template.yaml
+++ b/pkg/config/config_template.yaml
@@ -887,16 +887,13 @@ api_key:
 #
 # secret_backend_config:
 #   <KEY_1>: <VALUE_1>
-#   <KEY_2>: <VALUE_2>
-#   <KEY_3>:
-#     <KEY_3_1>: <VALUE_3_1>
-#     <KEY_3_2>: <VALUE_3_2>
 
 ## @param secret_backend_command - string - optional
 ## @env DD_SECRET_BACKEND_COMMAND - string - optional
 ## `secret_backend_command` is the path to your custom script to execute to fetch secrets.
 ## The executable must have specific rights that differ on Windows and Linux.
-## DO NOT SET this option if you are using the default secret backend.
+##
+## This option take precedence over `secret_backend_type`.
 ##
 ## For more information see: https://github.com/DataDog/datadog-agent/blob/main/docs/agent/secrets.md
 #
@@ -905,7 +902,8 @@ api_key:
 ## @param secret_backend_arguments - list of strings - optional
 ## @env DD_SECRET_BACKEND_ARGUMENTS - space separated list of strings - optional
 ## If secret_backend_command is set, specify here a list of arguments to give to the command at each run.
-## DO NOT SET this option if you are using the default secret backend.
+##
+## This option take precedence over `secret_backend_type`.
 #
 # secret_backend_arguments:
 #   - <ARGUMENT_1>
