--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -9,7 +9,6 @@ include:
   - .gitlab/common/shared.yml
   - .gitlab/common/skip_ci_check.yml
   - .gitlab/common/test_infra_version.yml
-  - .gitlab/common/trigger_distribution_conditions.yml
   - .gitlab/container_build/include.yml
   - .gitlab/container_scan/container_scan.yml
   - .gitlab/deploy_packages/include.yml
@@ -34,6 +33,7 @@ include:
   - .gitlab/pkg_metrics/pkg_metrics.yml
   - .gitlab/post_rc_build/post_rc_tasks.yml
   - .gitlab/trigger_distribution/trigger_distribution.yml
+  - .gitlab/trigger_distribution/conditions.yml
   - .gitlab/setup/setup.yml
   - .gitlab/source_test/include.yml
 
@@ -395,6 +395,9 @@ workflow:
 .on_main_always:
   - <<: *if_main_branch
     when: always
+
+.on_deploy:
+  - <<: *if_deploy
 
 .on_deploy_manual:
   - <<: *if_deploy
