--- a/.gitlab/trigger_distribution/conditions.yml
+++ b/.gitlab/trigger_distribution/conditions.yml
@@ -1,11 +1,5 @@
-.if_deploy: &if_deploy
-  if: $DEPLOY_AGENT == "true" || $DDR_WORKFLOW_ID != null
-
 .if_deploy_installer: &if_deploy_installer
   if: $DEPLOY_INSTALLER == "true" || $DDR_WORKFLOW_ID != null
-
-.if_not_deploy: &if_not_deploy
-  if: $DEPLOY_AGENT != "true" && $DDR_WORKFLOW_ID == null
 
 .if_not_stable_or_beta_repo_branch: &if_not_stable_or_beta_repo_branch
   if: $BUCKET_BRANCH != "beta" && $BUCKET_BRANCH != "stable"
@@ -15,11 +9,11 @@
 # Note: due to workflow rules, rc tag => deploy pipeline, so there's technically no
 # need to check again if the pipeline is a deploy pipeline, but it doesn't hurt
 # to explicitly add it.
-.if_deploy_on_rc_tag_on_beta_repo_branch: &if_deploy_on_rc_tag_on_beta_repo_branch
-  if: ($DEPLOY_AGENT == "true" || $DDR_WORKFLOW_ID != null) && $BUCKET_BRANCH == "beta" && $CI_COMMIT_TAG =~ /^[0-9]+\.[0-9]+\.[0-9]+-rc\.[0-9]+$/
+.if_rc_tag_on_beta_repo_branch: &if_rc_tag_on_beta_repo_branch
+  if: $BUCKET_BRANCH == "beta" && $CI_COMMIT_TAG =~ /^[0-9]+\.[0-9]+\.[0-9]+-rc\.[0-9]+$/
 
-.if_deploy_on_beta_repo_branch: &if_deploy_on_beta_repo_branch
-  if: ($DEPLOY_AGENT == "true" || $DDR_WORKFLOW_ID != null) && $BUCKET_BRANCH == "beta"
+.if_beta_repo_branch: &if_beta_repo_branch
+  if: $BUCKET_BRANCH == "beta"
 
 .if_not_stable_repo_branch: &if_not_stable_repo_branch
   if: $BUCKET_BRANCH != "stable"
@@ -27,17 +21,12 @@
 .if_not_deploy_installer: &if_not_deploy_installer
   if: $DEPLOY_INSTALLER != "true" && $DDR_WORKFLOW_ID == null
 
-.on_deploy:
-  - <<: *if_deploy
-
 # This rule is a variation of on_deploy_manual where
 # the job is usually run manually, except when the pipeline
 # builds an RC: in this case, the job is run automatically.
 # This is done to reduce the number of manual steps that have
 # to be done when creating RCs.
 .on_deploy_manual_auto_on_rc:
-  - <<: *if_not_deploy
-    when: never
   - <<: *if_not_stable_or_beta_repo_branch
     when: manual
     allow_failure: true
@@ -46,7 +35,7 @@
       OTEL_AGENT_REPOSITORY: ddot-collector-dev
       DSD_REPOSITORY: dogstatsd-dev
       IMG_REGISTRIES: dev
-  - <<: *if_deploy_on_rc_tag_on_beta_repo_branch
+  - <<: *if_rc_tag_on_beta_repo_branch
     when: on_success
     variables:
       AGENT_REPOSITORY: agent
@@ -62,9 +51,7 @@
       IMG_REGISTRIES: public
 
 .on_deploy_rc:
-  - <<: *if_not_deploy
-    when: never
-  - <<: *if_deploy_on_rc_tag_on_beta_repo_branch
+  - <<: *if_rc_tag_on_beta_repo_branch
     when: on_success
     variables:
       AGENT_REPOSITORY: agent
@@ -75,9 +62,7 @@
 # Same as on_deploy_manual, except the job would not run on pipelines
 # using beta branch, it would only run for the final release.
 .on_deploy_manual_final:
-  - <<: *if_not_deploy
-    when: never
-  - <<: *if_deploy_on_beta_repo_branch
+  - <<: *if_beta_repo_branch
     when: never
   - <<: *if_not_stable_or_beta_repo_branch
     when: manual
@@ -101,9 +86,7 @@
 # agent 7 versions should be published internally using these
 # configurations.
 .on_deploy_internal_rc:
-  - <<: *if_not_deploy
-    when: never
-  - <<: *if_deploy_on_rc_tag_on_beta_repo_branch
+  - <<: *if_rc_tag_on_beta_repo_branch
     when: on_success
     variables:
       AGENT_REPOSITORY: ci/datadog-agent/agent-release
@@ -116,9 +99,7 @@
 # Same as on_deploy_manual_final, except the job is used to publish images
 # to our internal registries.
 .on_deploy_internal_manual_final:
-  - <<: *if_not_deploy
-    when: never
-  - <<: *if_deploy_on_beta_repo_branch
+  - <<: *if_beta_repo_branch
     when: never
   - <<: *if_not_stable_or_beta_repo_branch
     when: never
@@ -135,8 +116,7 @@
 .on_deploy_stable_or_beta_repo_branch_manual:
   - <<: *if_not_stable_or_beta_repo_branch
     when: never
-  - <<: *if_deploy
-    when: manual
+  - when: manual
     allow_failure: true
 
 # This rule will add the job as manual when running on beta deploy branch
@@ -144,8 +124,6 @@
 # on stable deploy branch.
 .on_deploy_stable_or_beta_manual_auto_on_stable:
   - <<: *if_not_stable_or_beta_repo_branch
-    when: never
-  - <<: *if_not_deploy
     when: never
   - <<: *if_not_stable_repo_branch
     when: manual
