--- a/.gitlab/packaging/rpm.yml
+++ b/.gitlab/packaging/rpm.yml
@@ -118,38 +118,38 @@ agent_suse-arm64-a7-fips:
     OMNIBUS_EXTRA_ARGS: "--host-distribution=suse --flavor fips"
     DD_PROJECT: agent
 
-ot_agent_rpm-amd64:
+ddot_rpm-x64:
   extends: [.package_rpm_common, .package_rpm_x86]
   needs: ["datadog-otel-agent-x64"]
   variables:
-    DD_PROJECT: otel-agent
+    DD_PROJECT: ddot
     PACKAGE_REQUIRED_FILES_LIST: ""
     # TODO(agent-devx): Re-enable VPA by removing this when it will be possible to configure memory lower bound to avoid OOMs
     DD_DISABLE_VPA: true
 
-ot_agent_rpm-arm64:
+ddot_rpm-arm64:
   extends: [.package_rpm_common, .package_rpm_arm64]
   needs: ["datadog-otel-agent-arm64"]
   variables:
-    DD_PROJECT: otel-agent
+    DD_PROJECT: ddot
     PACKAGE_REQUIRED_FILES_LIST: ""
     # TODO(agent-devx): Re-enable VPA by removing this when it will be possible to configure memory lower bound to avoid OOMs
     DD_DISABLE_VPA: true
 
-ot_agent_suse_rpm-amd64:
+ddot_suse_rpm-x64:
   extends: [.package_suse_rpm_common, .package_rpm_x86]
   needs: ["datadog-otel-agent-x64"]
   variables:
-    DD_PROJECT: otel-agent
+    DD_PROJECT: ddot
     PACKAGE_REQUIRED_FILES_LIST: ""
     # TODO(agent-devx): Re-enable VPA by removing this when it will be possible to configure memory lower bound to avoid OOMs
     DD_DISABLE_VPA: true
 
-ot_agent_suse_rpm-arm64:
+ddot_suse_rpm-arm64:
   extends: [.package_suse_rpm_common, .package_rpm_arm64]
   needs: ["datadog-otel-agent-arm64"]
   variables:
-    DD_PROJECT: otel-agent
+    DD_PROJECT: ddot
     PACKAGE_REQUIRED_FILES_LIST: ""
     # TODO(agent-devx): Re-enable VPA by removing this when it will be possible to configure memory lower bound to avoid OOMs
     DD_DISABLE_VPA: true
